syntax = "proto3";

package ebf.bar.v1;

message UnaryRequest {
  string data = 1;
}

message UnaryResponse {
  string data = 1;
}

message ServerStreamRequest {
  string data = 1;
}

message ServerStreamResponse {
  string data = 1;
}

message ClientStreamRequest {
  string data = 1;
}

message ClientStreamResponse {
  string data = 1;
}

message BiStreamingRequest {
  string data = 1;
}

message BiStreamingResponse {
  string data = 1;
}

service BarService {
  rpc Unary(UnaryRequest) returns (UnaryResponse) {};
  rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {};
  rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {};
  rpc BidirectionStreaming(stream BiStreamingRequest) returns (stream BiStreamingResponse) {};
}